--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "reset": "psql -U immigrants -d devtool_immigrants < ./src/db/schema/create.sql && psql -U immigrants -d devtool_immigrants < ./src/db/schema/immigrants.sql"
   },
   "keywords": [],
   "author": "",
