--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.7.0",
     "@tensorflow-models/knn-classifier": "^1.2.4",
     "@tensorflow-models/mobilenet": "^2.1.0",
     "@tensorflow/tfjs": "^3.16.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "prop-types": "^15.8.1",
     "chart.js": "^3.7.1",
     "react-chartjs-2": "^4.1.0",
+    "react-circular-progressbar": "^2.0.4",
     "react": "^18.1.0",
+    "react-slider": "^2.0.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "react-webcam": "^7.0.1"
