--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,15 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "openai": "^2.0.5",
     "react": "^18.1.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^2.3.1",
-    "bootstrap": "^5.1.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.1.0",
+    "react-feather": "^2.0.9",
     "react-icons": "^4.3.1",
     "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
