--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,1 @@
-OPEN_AI_KEY = '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'
+REACT_APP_API_KEY=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
