--- a/client/package.json
+++ b/client/package.json
@@ -13,15 +13,19 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "prop-types": "^15.8.1",
     "chart.js": "^3.7.1",
+    "prop-types": "^15.8.1",
+    "react": "^18.0.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-chartjs-2": "^4.1.0",
     "react-circular-progressbar": "^2.0.4",
-    "react": "^18.1.0",
-    "react-slider": "^2.0.0",
-    "react-dom": "^18.1.0",
+    "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-webcam": "^7.0.1"
+    "react-slider": "^2.0.0",
+    "react-webcam": "^7.0.1",
+    "sass": "^1.51.0"
   },
   "scripts": {
     "start": "react-scripts start",
