--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,6 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
     "prop-types": "^15.8.1",
     "chart.js": "^3.7.1",
     "react-chartjs-2": "^4.1.0",
@@ -22,8 +21,7 @@
     "react-slider": "^2.0.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "react-webcam": "^7.0.1",
-    "styled-components": "^5.3.5"
+    "react-webcam": "^7.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
