--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "chart.js": "^3.7.1",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
@@ -25,7 +26,8 @@
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.0",
     "react-webcam": "^7.0.1",
-    "sass": "^1.51.0"
+    "sass": "^1.51.0",
+    "styled-components": "^5.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
