--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
     "@tensorflow-models/knn-classifier": "^1.2.4",
@@ -15,7 +16,6 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
     "openai": "^2.0.5",
     "prop-types": "^15.8.1",
