--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,8 @@
     "react-spotify-web-playback": "^0.9.2",
     "react-webcam": "^7.0.1",
     "reactstrap": "^9.0.2",
+    "mdb-react-ui-kit": "^3.0.0",
+    "mdbreact": "^5.2.0",
     "sass": "^1.51.0",
     "spotify-web-api-node": "^5.0.2",
     "styled-components": "^5.3.5"
