--- a/client/.gitignore
+++ b/client/.gitignore
@@ -19,7 +19,7 @@ client/package-lock.json
 .env.development.local
 .env.test.local
 .env.production.local
-.env
+../.env
 
 npm-debug.log*
 yarn-debug.log*
