more watch outs

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,6 +1,7 @@
-HOST: 
-USER: 
-PASSWORD: 
-DATABASE: 
-PORT:
-REACT_APP_API_KEY=
+REACT_APP_OPENAI=
+REACT_APP_SPOTIFY=
+REACT_APP_WEATHER=
+REACT_APP_NEWS=
+REDIRECT_URI=
+
+CLIENT_ID=
