--- a/client/.gitignore
+++ b/client/.gitignore
@@ -21,6 +21,7 @@ client/package-lock.json
 .env.test.local
 .env.production.local
 ../.env
+/src/news/Newshelper.js
 
 npm-debug.log*
 yarn-debug.log*
