--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@tensorflow/tfjs": "^3.16.0",
     "axios": "^0.27.2",
     "chart.js": "^3.7.1",
+    "force": "^0.0.3",
     "howler": "^2.2.3",
     "openai": "^2.0.5",
     "react": "^18.1.0",
