--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-slider": "^2.0.0",
     "react-spotify-web-playback": "^0.9.2",
     "react-webcam": "^7.0.1",
